--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink:           pretty
 
 # Setup
 title:            SLACKHA
-tagline:          'Software Library for Accelerating Chemical Kinetics on Hybrid'
+tagline:          'Software Library for Accelerating Chemical Kinetics on Hybrid Architectures'
 description:      ''
 url:              http://slackha.github.io/
 paginate:         1
